[gd_scene load_steps=8 format=3 uid="uid://1o6hivy8862p"]

[ext_resource type="Script" path="res://GameUI.gd" id="1_5xws6"]
[ext_resource type="Script" path="res://GameManager.gd" id="1_145do"]
[ext_resource type="TileSet" uid="uid://dskmyvdux4x8r" path="res://new_tile_set.tres" id="2_sr2ol"]
[ext_resource type="PackedScene" uid="uid://4gg0i7eymyfj" path="res://ball_token.tscn" id="9_xq8lo"]
[ext_resource type="PackedScene" uid="uid://df5ef6qdj4fev" path="res://amoeball_game.tscn" id="11_s088v"]
[ext_resource type="Texture2D" uid="uid://cldq6xlynktw4" path="res://assets/game_over_green.png" id="12_6q4qm"]
[ext_resource type="Texture2D" uid="uid://f50gr6tej7wb" path="res://assets/game_over_purple.png" id="13_oj5ei"]

[node name="GameUI" type="Node2D" node_paths=PackedStringArray("board", "game_manager", "ball", "game", "win_screen_layer", "game_over_timer", "green_wins_label", "purple_wins_label")]
script = ExtResource("1_5xws6")
board = NodePath("Board")
game_manager = NodePath("GameManager")
ball = NodePath("Ball")
game = NodePath("AmoeballGame")
win_screen_layer = NodePath("WinScreenLayer")
game_over_timer = NodePath("GameOverTimer")
green_wins_label = NodePath("WinScreenLayer/ColorRect/Control/GreenWins")
purple_wins_label = NodePath("WinScreenLayer/ColorRect/Control/PurpleWins")

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("game", "ui")]
script = ExtResource("1_145do")
game = NodePath("../AmoeballGame")
ui = NodePath("..")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Board" type="TileMap" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
position = Vector2(185, 101)
tile_set = ExtResource("2_sr2ol")
format = 2
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(65532, 4, 0, -65539, 65540, 0, -3, 131076, 0, 65533, 65540, 0, 131069, 131076, 0, 196605, 65540, 0, -196610, 131076, 0, -131074, 4, 0, -65538, 131076, 0, -2, 4, 0, 65534, 131076, 0, 131070, 4, 0, 196606, 131076, 0, 262142, 4, 0, 327678, 131076, 0, -196609, 4, 0, -131073, 65540, 0, -65537, 4, 0, -1, 65540, 0, 65535, 4, 0, 131071, 65540, 0, 196607, 4, 0, 262143, 65540, 0, 327679, 4, 0, -262144, 65540, 0, -196608, 131076, 0, -131072, 65540, 0, -65536, 131076, 0, 0, 65540, 0, 65536, 131076, 0, 131072, 65540, 0, 196608, 131076, 0, 262144, 65540, 0, -262143, 131076, 0, -196607, 4, 0, -131071, 131076, 0, -65535, 4, 0, 1, 131076, 0, 65537, 4, 0, 131073, 131076, 0, 196609, 4, 0, 262145, 131076, 0, -262142, 4, 0, -196606, 65540, 0, -131070, 4, 0, -65534, 65540, 0, 2, 4, 0, 65538, 65540, 0, 131074, 4, 0, 196610, 65540, 0, 262146, 4, 0, -196605, 131076, 0, -131069, 65540, 0, -65533, 131076, 0, 3, 65540, 0, 65539, 131076, 0, 131075, 65540, 0, 196611, 131076, 0, -65532, 4, 0, 4, 131076, 0, 65540, 4, 0, -589832, 327685, 1, -589831, 327685, 1, -589830, 65541, 0, -589829, 196613, 2, -589828, 131077, 2, -589827, 131077, 0, -589826, 327685, 1, -589825, 131077, 0, -655360, 262149, 2, -655359, 65541, 1, -655358, 131077, 1, -655357, 327685, 2, -655356, 327685, 1, -655355, 196613, 0, -655354, 327685, 1, -655353, 262149, 1, -655352, 327685, 0, -589815, 327685, 1, -524280, 65541, 0, -458743, 5, 2, -393208, 262149, 1, -327671, 131077, 0, -262136, 262149, 2, -196599, 5, 1, -131064, 196613, 1, -65527, 65541, 0, 8, 65541, 0, 65545, 65541, 1, 131080, 262149, 0, 196617, 196613, 0, 262152, 5, 1, 327689, 262149, 1, 393224, 196613, 1, 458761, 131077, 2, 524296, 131078, 1, 589833, 131077, 0, 655368, 327685, 2, 720905, 196613, 1, 786440, 65541, 1, 786439, 196613, 0, 786438, 327685, 2, 786437, 131077, 0, 786436, 327685, 2, 786435, 5, 1, 786434, 196613, 2, 786433, 327685, 2, 786432, 5, 2, 851967, 5, 1, 851966, 262149, 0, 851965, 131077, 2, 851964, 262149, 0, 851963, 262149, 2, 851962, 262149, 2, 851961, 5, 0, 851960, 65541, 2, -524296, 131077, 0, -458761, 131077, 2, -393224, 131077, 2, -327689, 262149, 2, -262152, 65541, 2, -196617, 5, 2, -131080, 65541, 2, -65545, 131077, 2, -8, 196613, 2, 65527, 131077, 0, 131064, 327685, 0, 196599, 65541, 0, 262136, 5, 0, 327671, 5, 1, 393208, 327685, 1, 458743, 327685, 0, 524280, 131077, 1, 589815, 65541, 2, 655352, 131077, 0, 720887, 131077, 2, 786424, 131077, 0, 851959, 65541, 2, 524293, 131078, 1, 458758, 6, 1, 393222, 65541, 0, 327687, 262149, 2, 262151, 327685, 1, 196616, 262149, 1, 131079, 262149, 0, 65544, 65541, 1, 7, 5, 2, -65528, 327685, 2, -131065, 262149, 0, -196600, 327685, 2, -262137, 131077, 2, -327672, 131077, 0, -393209, 196613, 1, -458744, 196613, 0, -524281, 65541, 2, -589816, 5, 0, -589817, 5, 2, -589818, 5, 0, -589819, 196613, 1, -589820, 131077, 2, -589821, 5, 1, -589822, 196613, 1, -589823, 262149, 1, -589824, 131077, 2, -524289, 262149, 0, -524290, 262149, 1, -524291, 327685, 1, -524292, 131077, 1, -524293, 65541, 2, -524294, 131077, 0, -524295, 196613, 1, -458760, 5, 0, -393223, 262149, 1, -458759, 65541, 1, -393222, 196613, 0, -458758, 65541, 2, -393221, 327685, 2, -458757, 262149, 2, -393220, 327685, 2, -458756, 196613, 0, -393219, 5, 1, -458755, 65541, 2, -393218, 262149, 1, -458754, 131077, 0, -393217, 65541, 1, -458753, 131077, 2, -458752, 131077, 2, -524288, 131077, 1, -458751, 327685, 2, -524287, 5, 0, -458750, 196613, 2, -524286, 327685, 2, -458749, 131077, 2, -524285, 196613, 1, -458748, 65541, 2, -524284, 262149, 0, -458747, 327685, 2, -524283, 65541, 2, -458746, 65541, 2, -524282, 5, 2, -458745, 262149, 1, -393210, 196613, 1, -393211, 131077, 1, -393212, 327685, 0, -393213, 327685, 2, -393214, 65541, 1, -393215, 327685, 0, -393216, 65541, 1, -327681, 196613, 0, -327682, 65541, 2, -327683, 327685, 2, -327684, 196613, 1, -327685, 65541, 1, -327686, 131077, 1, -327687, 5, 2, -327688, 5, 1, -262151, 327685, 0, -196616, 196613, 2, -131079, 327685, 0, -196615, 131077, 0, -262150, 327685, 0, -196614, 327685, 2, -262149, 65541, 1, -196613, 131077, 0, -262148, 131077, 1, -196612, 5, 2, -262147, 131077, 0, -196611, 5, 2, -262146, 327685, 0, -262145, 131077, 2, -327680, 196613, 1, -327679, 196613, 2, -327678, 196613, 2, -327677, 327685, 1, -262141, 5, 0, -327676, 327685, 0, -262140, 5, 1, -327675, 262149, 0, -262139, 5, 1, -327674, 65541, 1, -262138, 65541, 1, -327673, 327685, 2, -196602, 262149, 1, -196603, 196613, 1, -196604, 196613, 0, -131068, 65541, 1, -65531, 65541, 0, -131067, 5, 0, -65530, 131077, 1, -131066, 262149, 0, -196601, 5, 2, -65529, 5, 2, 6, 5, 1, 5, 5, 2, 65541, 262149, 0, 131076, 131077, 0, 196612, 196613, 2, 262147, 262149, 2, 327683, 327685, 2, 327682, 327685, 1, 327681, 262149, 1, 327680, 327685, 2, 393215, 196613, 0, 393214, 262149, 1, 327677, 5, 0, 262141, 196613, 0, 196604, 5, 0, 131068, 131077, 0, 65531, 5, 0, -4, 327685, 0, -65540, 65541, 0, -131075, 65541, 1, -131076, 5, 1, -131077, 5, 0, -131078, 196613, 1, -65543, 5, 2, -65544, 327685, 0, -7, 131077, 2, 65528, 196613, 0, 131065, 327685, 1, 65529, 262149, 2, -6, 327685, 1, -65542, 131077, 1, -5, 327685, 1, -65541, 5, 0, 65530, 65541, 1, 131066, 5, 2, 196601, 196613, 0, 196600, 65541, 1, 262137, 65541, 2, 327672, 327685, 0, 393209, 65541, 2, 327673, 5, 0, 262138, 131077, 1, 196602, 131077, 2, 131067, 65541, 0, 196603, 131077, 2, 262139, 327685, 0, 327674, 5, 1, 393210, 262149, 1, 458745, 262149, 0, 458744, 131077, 1, 524281, 6, 0, 589816, 65542, 0, 655353, 6, 0, 589817, 131078, 0, 524282, 65542, 0, 458746, 327685, 2, 393211, 327685, 0, 327675, 65541, 1, 262140, 327685, 0, 327676, 65541, 2, 393212, 327685, 1, 458747, 262149, 0, 524283, 131078, 0, 589818, 6, 0, 655354, 65542, 0, 720889, 65541, 0, 720888, 5, 0, 786425, 196613, 0, 786426, 65541, 0, 720890, 65541, 2, 655355, 131078, 0, 589819, 65542, 0, 524284, 6, 0, 458748, 327685, 1, 393213, 327685, 1, 458749, 65541, 0, 524285, 5, 0, 589820, 131078, 0, 655356, 6, 0, 720891, 65541, 2, 786427, 65541, 2, 786428, 196613, 1, 720892, 65541, 2, 655357, 65541, 0, 589821, 5, 2, 524286, 327685, 2, 458750, 5, 1, 524287, 65541, 0, 458751, 131077, 0, 458752, 262149, 0, 393216, 327685, 0, 458753, 262149, 2, 393217, 327685, 2, 458754, 196613, 2, 393218, 5, 1, 458755, 196613, 1, 393219, 5, 2, 327684, 327685, 1, 262148, 5, 2, 196613, 131077, 0, 131077, 327685, 1, 65542, 262149, 1, 131078, 196613, 0, 65543, 196613, 1, 196614, 65541, 1, 262149, 196613, 2, 327685, 5, 1, 393220, 262149, 1, 458756, 327685, 2, 524291, 262149, 0, 524290, 327685, 0, 524289, 65541, 1, 524288, 327685, 2, 589823, 5, 0, 589822, 327685, 1, 655358, 131077, 1, 720893, 131077, 0, 786429, 262149, 1, 786430, 196613, 2, 720894, 65541, 0, 655359, 262149, 0, 720895, 262149, 0, 589824, 65541, 0, 655360, 65541, 0, 589825, 131077, 1, 655361, 65541, 1, 589826, 131077, 2, 655362, 327685, 0, 589827, 196613, 2, 655363, 131077, 1, 589828, 5, 0, 524292, 6, 1, 458757, 65542, 1, 393221, 196613, 1, 327686, 262149, 0, 262150, 327685, 2, 196615, 262149, 1, 589829, 65542, 1, 655364, 327685, 1, 720900, 196613, 2, 720899, 196613, 0, 720898, 131077, 1, 720897, 196613, 2, 720896, 65541, 0, 786431, 5, 1, 720901, 327685, 0, 655365, 196613, 0, 589830, 6, 1, 524294, 65542, 1, 458759, 131078, 1, 393223, 327685, 2, 327688, 196613, 1, 458760, 65542, 1, 524295, 6, 1, 589831, 131078, 1, 655366, 5, 0, 720902, 65541, 1, 720903, 5, 1, 655367, 131077, 0, 589832, 65542, 1, 720904, 196613, 2)

[node name="Ball" parent="." instance=ExtResource("9_xq8lo")]
position = Vector2(526, 289)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(212, 121)
zoom = Vector2(3, 3)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(212, 121)

[node name="AmoeballGame" parent="." instance=ExtResource("11_s088v")]
unique_name_in_owner = true

[node name="GameOverTimer" type="Timer" parent="."]
one_shot = true

[node name="WinScreenLayer" type="CanvasLayer" parent="."]
visible = false
scale = Vector2(3, 3)
transform = Transform2D(3, 0, 0, 3, 0, 0)

[node name="ColorRect" type="ColorRect" parent="WinScreenLayer"]
self_modulate = Color(0, 0, 0, 0.611765)
offset_right = 430.0
offset_bottom = 240.0

[node name="Control" type="Control" parent="WinScreenLayer/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = -6.0
offset_right = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="GreenWins" type="Sprite2D" parent="WinScreenLayer/ColorRect/Control"]
visible = false
texture = ExtResource("12_6q4qm")

[node name="PurpleWins" type="Sprite2D" parent="WinScreenLayer/ColorRect/Control"]
visible = false
texture = ExtResource("13_oj5ei")

[connection signal="ball_moved" from="AmoeballGame" to="." method="_on_amoeball_game_ball_moved"]
[connection signal="game_over" from="AmoeballGame" to="." method="_on_amoeball_game_game_over"]
[connection signal="made_new_token" from="AmoeballGame" to="." method="_on_amoeball_game_made_new_token"]
[connection signal="new_turn" from="AmoeballGame" to="." method="_on_amoeball_game_new_turn"]
[connection signal="removed_token" from="AmoeballGame" to="." method="_on_amoeball_game_removed_token"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
